--- a/cplaper/Untitled.ipynb
+++ b/cplaper/Untitled.ipynb
@@ -2,21 +2,172 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cplaper import *"
+    "import vasppy\n",
+    "from vasppy.calculation import *\n",
+    "import os\n",
+    "\n",
+    "def to_cplap( compound_of_interest, competing_phases, elemental_references, dependant_variable ):\n",
+    "\n",
+    "    interest = import_calculations_from_file( compound_of_interest )\n",
+    "    ele_ref  = import_calculations_from_file( elemental_references )\n",
+    "    comps    = import_calculations_from_file( competing_phases )\n",
+    "    \n",
+    "    elements = cplap_elements(ele_ref) \n",
+    "    \n",
+    "    cplap_mkinput ( cplap_interest( interest, elements, comps, dependant_variable), cplap_competing(comps, elements) )\n",
+    "    \n",
+    "def cplap_interest( interest, elements, competing_phases, dependant_variable):  \n",
+    "\n",
+    "    interest_phase_fomula = []\n",
+    "    interest_info = []\n",
+    "\n",
+    "    for material in interest:                                \n",
+    "        interest_phase_key = str(material)                    \n",
+    "        interest_phase_fomula.append(interest_phase_key)      \n",
+    "    \n",
+    "    for i in interest_phase_fomula:\n",
+    "        number_of_elements = (len (interest['{}'.format(i)].stoichiometry))\n",
+    "        stoich = interest['{}'.format(i)].stoichiometry\n",
+    "        formatted_stoich = [(v,k) for k,v in stoich.items()]\n",
+    "        interest_info.append([formatted_stoich, cplap_energy(interest['{}'.format(i)], elements)])\n",
+    "    \n",
+    "    interest_parameters = []\n",
+    "    \n",
+    "    interest_parameters.append(len( elements ))\n",
+    "    interest_parameters.append(interest_info)\n",
+    "    interest_parameters.append(dependant_variable)\n",
+    "    interest_parameters.append(len( competing_phases ))\n",
+    "    \n",
+    "    return interest_parameters\n",
+    "\n",
+    "\n",
+    "def cplap_competing( competing_phases, elements ):\n",
+    "     \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    competing_phase_fomula = []    \n",
+    "    \n",
+    "    for compound in competing_phases:                                 \n",
+    "        competing_phase_key = str(compound)                 \n",
+    "        competing_phase_fomula.append(competing_phase_key) \n",
+    "    \n",
+    "    competing_phase_info = []\n",
+    "\n",
+    "    for i in competing_phase_fomula:\n",
+    "        number_of_elements = (len (competing_phases['{}'.format(i)].stoichiometry))\n",
+    "        stoich = competing_phases['{}'.format(i)].stoichiometry\n",
+    "        formatted_stoich = [(v,k) for k,v in stoich.items()]\n",
+    "                                                                                                \n",
+    "        competing_phase_info.append(number_of_elements)\n",
+    "        competing_phase_info.append([formatted_stoich, cplap_energy(competing_phases['{}'.format(i)], elements)])\n",
+    "        \n",
+    "    return competing_phase_info\n",
+    " \n",
+    "def cplap_mkinput( interest_info, competing_info ):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    with open('interim.dat', 'w') as file:\n",
+    "        for item in interest_info:\n",
+    "            file.write(\"%s\\n\" % item)\n",
+    "        for item in competing_info:\n",
+    "            file.write(\"%s\\n\" % item)\n",
+    "        \n",
+    "\n",
+    "    f = open('interim.dat','r')\n",
+    "    filedata = f.read()\n",
+    "    f.close()\n",
+    "\n",
+    "    newdata = filedata.replace(\"'\",\"\").replace(\"[\",\"\").replace(\"[\",\"\").replace(\"]\",\"\").replace(\",\",\"\").replace(\"(\",\"\").replace(\")\",\"\").replace(\":\",\"\")\n",
+    "\n",
+    "\n",
+    "    f = open('input.dat','w')\n",
+    "    f.write(newdata)\n",
+    "    f.close()\n",
+    "    \n",
+    "    os.remove('interim.dat')\n",
+    "\n",
+    "\n",
+    "\n",
+    "def cplap_elements( elemental_references ):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Takes a set of element vasppy.Calculation objects and returns a dictionary of scaled energies (per atom)\n",
+    "    \n",
+    "    Args:\n",
+    "        elemental_references (dict(vasppy.Calculations)): vasppy calculations for elements to be considered\n",
+    "        \n",
+    "    Returns:\n",
+    "        normalised_elemental_references (dict{Str:Float}): dictionary of {elemental symbol : energy per atom}\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    elements = []     \n",
+    "    elemental_reference_energies = []\n",
+    "    \n",
+    "    for key in elemental_references:                                   \n",
+    "        ion = str(key)                                                  \n",
+    "        elements.append(ion)                                              \n",
+    "                                                                    \n",
+    "    for ion in elements:                                                                                                  \n",
+    "        single_element_energy = float (elemental_references['{}'.format(ion)].energy \n",
+    "                                       / elemental_references['{}'.format(ion)].stoichiometry[ion] )                        \n",
+    "        individual_ion_dict = { ion : single_element_energy }                                                                              \n",
+    "        elemental_reference_energies.append(individual_ion_dict)               \n",
+    "    \n",
+    "    normalised_elemental_references = { k: v for d in elemental_reference_energies for k, v in d.items() }                             \n",
+    "    return normalised_elemental_references    \n",
+    "\n",
+    "\n",
+    "def cplap_energy(compound, elemental_references):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Calulates the formation energy of a compound\n",
+    "    \n",
+    "    Args: \n",
+    "        compound (vasppy.Calculation): compound for which formation energy should be calculated\n",
+    "        elemental_references (dict{str:float}): dictionary of elemental symbol:energy\n",
+    "    \n",
+    "    Returns:\n",
+    "        (float) formation energy: formation energy\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    individual_energies = []\n",
+    "    \n",
+    "    for element in elemental_references:\n",
+    "            energy_per_element = compound.stoichiometry['{}'.format(element)] * elemental_references['{}'.format(element)] \n",
+    "            individual_energies.append(energy_per_element)\n",
+    "            sum_of_elemental_energies = sum(individual_energies)\n",
+    "            formation_energy =( ( compound.energy) - sum_of_elemental_energies )\n",
+    "   \n",
+    "    return formation_energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_cplap('../interest.yaml', '../ref_PS.yaml', '../elements.yaml', 'Zr')"
+    "to_cplap('../interest.yaml', '../ref_PS.yaml', '../elements.yaml', 'bjwkgsig')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
